# ctd

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  HANDOFF.md  README.md  RELEASING.md  status.json
.cargo/: config.toml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: impementation-task.md
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
api/: .gitignore  biome.json  drizzle.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
api/drizzle/: 0000_clean_scream.sql  0001_api_keys.sql
api/drizzle/meta/: 0000_snapshot.json  _journal.json
api/src/: app.ts  index.ts  openapi.yaml
api/src/db/: index.ts  schema.ts  schema.zod.ts
api/src/lib/: api-key.ts  configure-open-api.ts  crash-hash.ts  create-app.ts  gzip.ts  index.ts  types.ts
api/src/routes/: api-keys.ts  config.ts  crashes.ts  docs.ts  health.route.ts  index.route.ts
api/src/routes/crash-reports/: crash-reports.handlers.ts  crash-reports.index.ts  crash-reports.routes.ts
api/test/: app.test.ts  crashes.test.ts  fixtures.ts
api/test/lib/: crash-hash.test.ts
api/test/routes/: crash-reports.test.ts
crates/: Cargo.toml
crates/ctd-core/: Cargo.toml
crates/ctd-core/src/: api_client.rs  config.rs  crash_report.rs  lib.rs  load_order.rs
crates/ctd-cyberpunk/: Cargo.toml
crates/ctd-cyberpunk/src/: lib.rs  report.rs
docs/: architecture.md
lib/ctd-core/: Cargo.toml
lib/ctd-core/src/: config.rs  crash_report.rs  file_hash.rs  lib.rs  load_order.rs  symbols.rs  version.rs
mods/cyberpunk/: Cargo.toml  nexus.toml
mods/cyberpunk/src/: crash_handler.rs  lib.rs  mod_scanner.rs  report.rs
mods/elden-ring/: CMakePresets.json  nexus.toml
mods/elden-ring/cpp/: dllmain.cpp
mods/fallout3/: CMakeLists.txt  CMakePresets.json  Cargo.toml  build.rs  nexus.toml
mods/fallout3/cpp/: bridge.hpp  plugin.cpp  veh.cpp  veh.hpp
mods/fallout3/nexus/fomod/: ModuleConfig.xml
mods/fallout3/src/: crash.rs  fingerprint.rs  lib.rs
mods/fallout4/: CMakeLists.txt  Cargo.toml  build.rs  nexus.toml
mods/fallout4/cpp/: bridge.hpp  plugin.cpp  stubs.cpp  veh.cpp
mods/fallout4/nexus/fomod/: ModuleConfig.xml
mods/fallout4/src/: crash.rs  fingerprint.rs  lib.rs
mods/falloutnv/: CMakeLists.txt  Cargo.toml  build.rs  nexus.toml
mods/falloutnv/cpp/: plugin.cpp  veh.cpp
mods/falloutnv/nexus/fomod/: ModuleConfig.xml  info.xml
mods/falloutnv/src/: crash.rs  lib.rs
mods/newvegas/: CMakeLists.txt  Cargo.toml  build.rs  nexus.toml
mods/newvegas/cpp/: bridge.hpp  plugin.cpp  veh.cpp
mods/newvegas/src/: crash.rs  fingerprint.rs  lib.rs
mods/oblivion-remastered/: CMakeLists.txt  CMakePresets.json  README.md  nexus.toml
mods/oblivion-remastered/cpp/: dllmain.cpp
mods/skyrim/: CMakeLists.txt  CMakePresets.json  Cargo.toml  build.rs  nexus.toml  vcpkg.json
mods/skyrim/cpp/: bridge.hpp  plugin.cpp  stubs.cpp  veh.cpp
mods/skyrim/nexus/: README.txt
mods/skyrim/nexus/SKSE/Plugins/: ctd.toml
mods/skyrim/nexus/fomod/: ModuleConfig.xml
mods/skyrim/src/: crash.rs  fingerprint.rs  lib.rs
mods/ue5/: Cargo.toml  build.rs
mods/ue5/cpp/: bridge.cpp  bridge.hpp
mods/ue5/src/: crash.rs  fingerprint.rs  lib.rs
scripts/: build-all.ps1  build-mod.ps1  build-ue4ss.ps1  bump-version.ps1  generate-status.ps1  package-mod.ps1  package-ue4ss-deps.ps1  release-mod.ps1  setup-ue4ss.ps1
