[workspace]
resolver = "2"
members = ["lib/ctd-core", "mods/cyberpunk", "mods/fallout4", "mods/skyrim", "mods/ue5"]
exclude = ["mods/oblivion-remastered/build", "mods/oblivion-remastered/RE-UE4SS"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ezmode-games/ctd"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2.0"
tracing = "0.1"
