[package]
name = "ctd-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for CTD (Crash To Desktop) - load order parsing, crash reports, and API client"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tracing.workspace = true
toml = "0.9.8"
dirs = "6.0.0"

[dev-dependencies]
