cmake_minimum_required(VERSION 3.22)

# Project configuration
project(
    ctd-fallout3
    VERSION 0.1.0
    LANGUAGES CXX
)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_DEBUG OFF)

# MSVC runtime library (must match Rust)
set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")

# ============================================================================
# Rust Library (Manual Build)
# ============================================================================

# Fallout 3 is 32-bit
set(RUST_TARGET "i686-pc-windows-msvc")

# Output paths for the Rust build
set(RUST_TARGET_DIR "${CMAKE_BINARY_DIR}/rust-build")
set(RUST_LIB_PATH "${RUST_TARGET_DIR}/${RUST_TARGET}/release/ctd_fallout3.lib")
set(CXX_BRIDGE_DIR "${RUST_TARGET_DIR}/${RUST_TARGET}/cxxbridge/ctd-fallout3/src")
set(CXX_BRIDGE_HEADER "${CXX_BRIDGE_DIR}/lib.rs.h")

# Custom command to build the Rust library
add_custom_command(
    OUTPUT ${RUST_LIB_PATH} ${CXX_BRIDGE_HEADER}
    COMMAND cargo build --release
        --manifest-path "${CMAKE_CURRENT_SOURCE_DIR}/Cargo.toml"
        --target ${RUST_TARGET}
        --target-dir "${RUST_TARGET_DIR}"
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    COMMENT "Building Rust library (ctd-fallout3)..."
    VERBATIM
)

# Custom target that depends on Rust build outputs
add_custom_target(ctd-fallout3-build ALL
    DEPENDS ${RUST_LIB_PATH} ${CXX_BRIDGE_HEADER}
)

# Create an IMPORTED library target for the Rust static library
add_library(ctd-fallout3-lib STATIC IMPORTED GLOBAL)
set_target_properties(ctd-fallout3-lib PROPERTIES
    IMPORTED_LOCATION ${RUST_LIB_PATH}
)
add_dependencies(ctd-fallout3-lib ctd-fallout3-build)

# ============================================================================
# C++ Plugin
# ============================================================================

# Find C++ source files
file(GLOB_RECURSE CPP_SOURCES
    "${CMAKE_CURRENT_SOURCE_DIR}/cpp/*.cpp"
)

# Create the FOSE plugin DLL
set(PLUGIN_TARGET ctd-fallout3-plugin)
add_library(${PLUGIN_TARGET} SHARED
    ${CPP_SOURCES}
)

target_include_directories(${PLUGIN_TARGET} PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    # Parent directory so "ctd-fallout3/cpp/..." resolves
    ${CMAKE_CURRENT_SOURCE_DIR}/..
    # CXX bridge output location (generated by Rust build)
    ${RUST_TARGET_DIR}/cxxbridge
    ${RUST_TARGET_DIR}/${RUST_TARGET}/cxxbridge
)

target_link_libraries(${PLUGIN_TARGET} PRIVATE
    ctd-fallout3-lib
    # Windows libraries required by Rust and VEH
    DbgHelp
    ntdll
    userenv
    ws2_32
    kernel32
    bcrypt
    runtimeobject
)

# Ensure plugin waits for Rust build (which generates CXX headers)
add_dependencies(${PLUGIN_TARGET} ctd-fallout3-build)

# ============================================================================
# Output Configuration
# ============================================================================

set_target_properties(${PLUGIN_TARGET} PROPERTIES
    OUTPUT_NAME "ctd-fallout3"
    SUFFIX ".dll"
)

# Install target for distribution
install(TARGETS ${PLUGIN_TARGET}
    RUNTIME DESTINATION "FOSE/Plugins"
)
