[package]
name = "ctd-newvegas"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NVSE plugin for Fallout: New Vegas crash capture and reporting"
links = "ctd-newvegas"

[lib]
crate-type = ["staticlib"]

[dependencies]
# Core CTD library
ctd-core = { path = "../../lib/ctd-core" }

# C++/Rust interop
cxx = "1.0"

# Async runtime for API calls
tokio = { version = "1", features = ["rt", "net", "sync"] }

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
] }

[build-dependencies]
cxx-build = "1.0"
