cmake_minimum_required(VERSION 3.22)

# Project configuration
project(
    CTDCrashReporter
    VERSION 0.1.0
    LANGUAGES CXX
)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_DEBUG OFF)

# MSVC runtime library (must match Rust)
set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")

# ============================================================================
# UE4SS SDK
# ============================================================================

include(FetchContent)

# Fetch UE4SS SDK
# Note: You need Epic Games account linked to GitHub for Unreal source access
FetchContent_Declare(
    UE4SS
    GIT_REPOSITORY https://github.com/UE4SS-RE/RE-UE4SS.git
    GIT_TAG main
)
FetchContent_MakeAvailable(UE4SS)

# ============================================================================
# Rust Library (ctd-ue5)
# ============================================================================

# Output paths for the Rust build
set(RUST_TARGET_DIR "${CMAKE_BINARY_DIR}/rust-build")
set(RUST_LIB_PATH "${RUST_TARGET_DIR}/x86_64-pc-windows-msvc/release/ctd_ue5.lib")
# CXX bridge outputs to rust-build/cxxbridge/ (not under target triple)
set(CXX_BRIDGE_DIR "${RUST_TARGET_DIR}/cxxbridge")
set(CXX_BRIDGE_HEADER "${CXX_BRIDGE_DIR}/ctd-ue5/src/lib.rs.h")

# UE5 mod Cargo.toml is in ../ue5
set(UE5_MOD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../ue5")

# Custom command to build the Rust library
add_custom_command(
    OUTPUT ${RUST_LIB_PATH} ${CXX_BRIDGE_HEADER}
    COMMAND cargo build --release
        --manifest-path "${UE5_MOD_DIR}/Cargo.toml"
        --target x86_64-pc-windows-msvc
        --target-dir "${RUST_TARGET_DIR}"
    WORKING_DIRECTORY ${UE5_MOD_DIR}
    COMMENT "Building Rust library (ctd-ue5)..."
    VERBATIM
)

# Custom target that depends on Rust build outputs
add_custom_target(ctd-ue5-build ALL
    DEPENDS ${RUST_LIB_PATH} ${CXX_BRIDGE_HEADER}
)

# Create an IMPORTED library target for the Rust static library
add_library(ctd-ue5-lib STATIC IMPORTED GLOBAL)
set_target_properties(ctd-ue5-lib PROPERTIES
    IMPORTED_LOCATION ${RUST_LIB_PATH}
)
add_dependencies(ctd-ue5-lib ctd-ue5-build)

# ============================================================================
# UE4SS C++ Mod
# ============================================================================

# Find C++ source files
file(GLOB_RECURSE CPP_SOURCES
    "${CMAKE_CURRENT_SOURCE_DIR}/cpp/*.cpp"
)

# Create the UE4SS mod DLL
set(MOD_TARGET CTDCrashReporter)
add_library(${MOD_TARGET} SHARED
    ${CPP_SOURCES}
)

target_include_directories(${MOD_TARGET} PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    # CXX bridge output location (generated by Rust build)
    ${CXX_BRIDGE_DIR}
    # C++ bridge header location (ctd-ue5/cpp/bridge.hpp)
    ${UE5_MOD_DIR}/cpp
)

target_link_libraries(${MOD_TARGET} PUBLIC
    UE4SS
    ctd-ue5-lib
    # Windows libraries required by Rust
    DbgHelp
    ntdll
    userenv
    ws2_32
    kernel32
    bcrypt
    runtimeobject
)

# Ensure mod waits for Rust build (which generates CXX headers)
add_dependencies(${MOD_TARGET} ctd-ue5-build)

# ============================================================================
# Output Configuration
# ============================================================================

# UE4SS mods go in: mods/<ModName>/dlls/main.dll
set_target_properties(${MOD_TARGET} PROPERTIES
    OUTPUT_NAME "main"
    SUFFIX ".dll"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/CTDCrashReporter/dlls"
)

# Install target for distribution
install(DIRECTORY "${CMAKE_BINARY_DIR}/CTDCrashReporter"
    DESTINATION "ue4ss/mods"
)
